增加FlowMAC方法原文

--- a/Models/Speech_Neural_Codec/2024.09.26_FlowMAC.md
+++ b/Models/Speech_Neural_Codec/2024.09.26_FlowMAC.md
@@ -53,7 +53,7 @@ This enables real-time coding on CPU, while maintaining high perceptual quality.
 In the modern digital world, audio codecs are used on a day-to-day basis, so every technological advancement can have a large impact.
 In recent years, deep neural networks (DNNs) revolutionized the field of audio compression.
 Early approaches~\cite{firstnn_coding,knet_coding,zhen2020efficientscalableneuralresidual} control the compression at via entropy-based losses and ensure good quality via reconstruction losses. 
-With the advent of deep generative models the quality of neural codecs at bit rates lower than 12\,kbps greatly improved. 
+With the advent of deep generative models the quality of neural codecs at bit rates lower than 12 kbps greatly improved. 
 
 While for speech coding many different approaches were proven to be successful~\cite{wavenet_coding,lpcnet_coding,ssmgan,cascade_coding}, the general audio codec SoundStream~\cite{soundstream} established a new paradigm of training a residual VQ-VAE~\cite{vq_vae} via an additional GAN loss end-to-end (e2e).
 For this, a DNN-encoder extracts a learned latent, a residual VQ generates the bit stream, and a DNN-decoder synthesizes the audio.
@@ -64,10 +64,10 @@ EnCodec~\cite{defossez2023encodec} used recurrent networks and an improved compr
 The Descript-Audio-Codec (DAC)~\cite{dac} achieved high quality extending on the model size, using innovative audio-specific activations~\cite{snake}, and scaling up the discriminator architecture.
 
 The e2e VQ-GAN approach offers a great flexibility in the design and complexity of the codec~\cite{tfnet,pia22_interspeech,funcodec}.
-However, it often entails a complicated and unstable training pipeline, which sometimes fails to meet quality expectations for challenging signal types, particularly at bit rates lower than 6\,kbps.
+However, it often entails a complicated and unstable training pipeline, which sometimes fails to meet quality expectations for challenging signal types, particularly at bit rates lower than 6 kbps.
 
 Denoising Diffusion Probabilistic Models (DDPMs) were proposed recently for speech~\cite{ladiffcodec} and general audio~\cite{NEURIPS2023_MDB,liu2024semanticodecultralowbitrate}.
-While~\cite{liu2024semanticodecultralowbitrate} targets semantic coding at ultra low bit rates, MultiBandDiffusion (MBD)~\cite{NEURIPS2023_MDB} is a decoder model that enables high-quality synthesis of the EnCodec latent at 1.5, 3 and 6\,kbps for general audio.
+While~\cite{liu2024semanticodecultralowbitrate} targets semantic coding at ultra low bit rates, MultiBandDiffusion (MBD)~\cite{NEURIPS2023_MDB} is a decoder model that enables high-quality synthesis of the EnCodec latent at 1.5, 3 and 6 kbps for general audio.
 This model uses a time-domain subband-based decoding scheme and achieves state-of-the-art quality for music.
 The high complexity of this model makes it hard to use in embedded devices and its dependency on a pre-trained bit stream might limit its compression capabilities.
 
@@ -77,14 +77,14 @@ This demonstrates the need for a solution that is easy to train, while offering 
 Recently, a new paradigm to train continuous normalizing flows (CNFs) called conditional flow matching (CFM) emerged~\cite{lipman2023flow} and demonstrated state-of-the-art quality for both image~\cite{esser2024scalingrectifiedflowtransformers} and audio generation~\cite{matcha, p_flow, le2023voicebox}.
 This approach offers a simple training pipeline at much lower inference and training costs compared to DDPMs. 
 
-In this work, we present the \textbf{Flow} \textbf{M}atching \textbf{A}udio \textbf{C}odec (\textbf{FlowMAC}), a new audio compression model for low bit rate coding of general audio at $24$\,kHz audio based on CFM.
+In this work, we present the \textbf{Flow} \textbf{M}atching \textbf{A}udio \textbf{C}odec (\textbf{FlowMAC}), a new audio compression model for low bit rate coding of general audio at $24$ kHz audio based on CFM.
 Our proposed approach learns a mel spectrogram encoder, residual VQ, and decoder via a combination of a simple reconstruction loss and the CFM objective.
 The CFM-based decoder generates realistic mel spectrograms from the discrete latent, which is then converted to waveform domain via an efficient version of BigVGAN~\cite{lee2023bigvgan}.
 The model design is simple and the training pipeline is stable and efficient.
 
 Our contributions can be summarized as follows: 
 - We introduce FlowMAC, a CFM-based mel spectrogram codec offering a simple and efficient training pipeline.
-- Our listening test results demonstrate that FlowMAC achieves state-of-the-art quality at 3\,kbps matching GAN-based and DDPM-based solutions at double the bit rate.
+- Our listening test results demonstrate that FlowMAC achieves state-of-the-art quality at 3 kbps matching GAN-based and DDPM-based solutions at double the bit rate.
 - We propose an efficient version of FlowMAC capable of coding at high quality and faster than real time on a CPU.
 
 </details>
@@ -108,7 +108,7 @@ Following Section 4.1 in~\cite{lipman2023flow} we define
 p_t(\mathbf{x}|\mathbf{x}_1) = \mathcal{N}\left(\mathbf{x}; \mu_t(\mathbf{x}_1), \sigma_t(\mathbf{x}_1)^2\mathbf{I}\right),
 \]
 
-\noindent where $\mathbf{x}_1\sim q(\mathbf{x}_1)$ sampled from the train set, $\mu_t(x) = t \mathbf{x}_1$, and $\sigma_t = 1 - (1 - \sigma_\text{min})t$ with $\sigma_\text{min} \ll 1$.
+where $\mathbf{x}_1\sim q(\mathbf{x}_1)$ sampled from the train set, $\mu_t(x) = t \mathbf{x}_1$, and $\sigma_t = 1 - (1 - \sigma_\text{min})t$ with $\sigma_\text{min} \ll 1$.
 This defines a Gaussian path where $p_0$ is the standard Gaussian and $p_1$ is a Gaussian centered at $\mathbf{x}_1$ with small variance.
 Theorem 3 in \cite{lipman2023flow} shows that this probability path is generated by the Optimal Transport Conditional Vector Field
 
@@ -135,3 +135,94 @@ This flow is then integrated using an ODE solver, e.g. the Euler method.
 </details>
 <br>
 
+## 3.Methodology: 方法
+
+<details>
+<summary>展开原文</summary>
+
+The architecture of FlowMAC is illustrated in Figure~\ref{fig:arch}.
+
+</details>
+<br>
+
+### 3.1.Mel Encoder-Decoder
+
+<details>
+<summary>展开原文</summary>
+
+The $128$ mel spectrogram bands are calculated on the input $24$ kHz audio with hop size $512$ and window of $2048$ samples, hence, yielding 47 frames per second.
+Mean and standard deviations are calculated offline for the whole dataset and used as fixed normalization factors for the input.
+The normalized mel spectrogram passes through a 1$\times$1 convolutional layer with 128 channels to extract features for the encoder.
+The encoder is a sequence of multi-head attention (MHA), dropout, layer normalization, feed-forward and dropout layers, producing a latent vector to be quantized.
+The network block is repeated $N=6$ times. 
+
+The decoder architecture follows the same structure as the encoder.
+Finally, a 1$\times$1 convolutional layer serves as a final projection layer to generate the decoded quantized mel spectrogram.
+The sum of MSE and MAE losses ($\mathcal{L}_{prior}$) serves as reconstruction loss for the input mel spectrogram. 
+
+For quantization we use a learned residual VQ based on VQ-VAE~\cite{vq_vae}, with projections to small dimensional spaces similar to~\cite{dac}.
+FlowMAC uses a codebook size of 256 and 8 quantizer stages and a downsampling dimension 16 for the 128-dimensional latent.
+Using 8 bits per level with 47 frames per second results in a rounded total of 3 kbps.
+
+</details>
+<br>
+
+### 3.2.CFM Module
+
+<details>
+<summary>展开原文</summary>
+
+The CFM architecture follows~\cite{matcha} and uses a U-Net with residual 1D convolutional blocks and transformer blocks with snakebeta activations~\cite{lee2023bigvgan}.
+Finally, the output of the U-Net passes through a 1D Block consisting of a 1D convolution, group normalization and a Mish activation~\cite{misra2020mishselfregularizednonmonotonic}, after which a 1$\times$1 convolutional layer creates the final output.
+The corresponding time-step embeddings use a RoPE-Embedding as in~\cite{grad_tts}.
+
+The CFM decoder is conditioned on the decoded quantized mel spectrogram via concatenation to the input Gaussian noise to estimate the corresponding vector field.
+The optimization criteria $\mathcal{L}_{\text{CFM}}$ is defined in Section~\ref{sec:fm}. 
+
+Overall, the training objective for the whole system is then
+
+\[
+	\mathcal{L} = \lambda_p \mathcal{L}_{prior} + \lambda_v\mathcal{L}_{q} + \mathcal{L}_{\text{CFM}},
+\]
+
+where $\lambda_p=0.01$ and $\lambda_v=0.25$ denote weighting factors for the prior and VQ-VAE loss ($\mathcal{L}_{q}$). 
+To improve the CFM training, we sample the timestep $t$ according to a logit normal distribution~\cite{esser2024scalingrectifiedflowtransformers} for each mini-batch.
+In addition, we train our model with a classifier-free guidance (CFG) technique~\cite{ho2021classifierfree}, where the decoded mel spectrogram condition is set to zero with a probability of $p_g=0.2$, which improves signal quality.
+
+</details>
+<br>
+
+### 3.3.Mel-to-Audio Module
+
+<details>
+<summary>展开原文</summary>
+
+As mel-to-audio module, we re-train a smaller version of BigVGAN~\cite{lee2023bigvgan} on our data: We adapt the mel spectrogram calculation to fit the setting described in Section~\ref{subsec:enc-dec}.
+Then, we decrease the decoder initial channels to 1024 and use an additional upsampling layer.
+This yields a smaller architecture than the original BigVGAN. %, whose number of parameters is comparable with the DAC Decoder.
+
+Notice that the dependence of our system on this mel-to-audio module for the final audio synthesis leads to a highest achievable quality dictated by BigVGAN's performance.
+This is saturated by our mel spectrogram codec and our subjective evaluations confirm this phenomenon.
+
+</details>
+<br>
+
+### 3.4.FlowMAC inference
+
+<details>
+<summary>展开原文</summary>
+
+Thanks to the residual vector quantizer we achieve bit rate scalability via dropping out codebook levels at inference time.
+Moreover, the iterative nature of the Euler method used for inference enables some freedom on the number of function evaluations (NFE) for the CFM decoder.
+FlowMAC works at 1.5 and 3 kbps, uses 32 steps for the ODE solver and factor 1 for the CFG, hence, leading to a total of 64 NFE. 
+
+Early experimentation showed that the quality of the mel coder subsystem quickly saturates.
+To test this, we introduce FlowMAC-CQ, a separately trained model at 6 kbps.
+For this we use the same hyperparameters and NFE as for FlowMAC.
+Finally, we test the quality-complexity trade-off via using a single step for the Euler method and no CFG, hence, obtaining FlowMAC-LC and using 1 NFE.
+
+Informal listening showed that using more than 64 NFE did not bring significant improvement in quality.
+Careful attention needs to be placed on the choice of the CFG factor: values smaller than 0.2 usually lead to noisy signals (except for the single-step Euler method) and values bigger that 2 overestimate the energy and introduce unwanted artifacts.
+
+</details>
+<br>
