更新FlowMAC结果原文

--- a/Models/Speech_Neural_Codec/2024.09.26_FlowMAC.md
+++ b/Models/Speech_Neural_Codec/2024.09.26_FlowMAC.md
@@ -285,3 +285,27 @@ We notice that none of the codecs is able to operate at low algorithmic delay, h
 
 </details>
 <br>
+
+## 5.Results: 结果
+
+<details>
+<summary>展开原文</summary>
+
+Figure~\ref{fig:p808} illustrates the results of the P.808 DCR listening test with 46 listeners.
+The results from the naive listeners confirm that both FlowMAC and FlowMAC-LC are the best models at 3 kbps, being on average on par with EnCodec and MBD at 6 kbps.
+FlowMAC at 1.5 kbps shows a significant quality drop, while no significant quality improvement is achieved by the 6 kbps version FlowMAC-CQ.
+As expected, the copy-synthesis with BigVGAN offers the highest achievable quality for our system.
+FlowMAC-LC's average rating are lower than the high-complexity version. Still, the test confirms that it is a competitive baseline.
+For naive listeners the higher frequency resolution of DAC 44.1 kHz at 8 kbps offers does not offer an advantage over the 24 kHz model.
+
+Overall we notice that the all DNN conditions achieve comparable quality with the legacy USAC condition at similar bit rates, the only exception being FlowMAC at 3 kbps.
+
+The results of the MUSHRA test with 14 listeners are illustrated in Figure~\ref{fig:mushra}.
+While USAC 8 kbps has a quality advantage on average over the other codecs here, this test demonstrates that FlowMAC at 3 kbps performs similar to DAC 6 kbps and both conditions outperform MBD 6 kbps.
+We notice that the performance of the DNN-based codecs highly varies for different items in the test set.
+In particular, FlowMAC performs poorly on the out-of-distribution test items, while its performance is on average comparable with DAC for speech and music.
+The copy-synthesis from BigVGAN performs best average and offers an measurement of the highest quality achievable with FlowMAC.
+We notice that these results more clearly highlight fine difference between the codecs, but are overall in accordance with our P.808 test results.
+
+</details>
+<br>
