--- a/Models/Speech_Neural_Codec/2024.09.26_FlowMAC.md
+++ b/Models/Speech_Neural_Codec/2024.09.26_FlowMAC.md
@@ -55,31 +55,31 @@ In recent years, deep neural networks (DNNs) revolutionized the field of audio c
 Early approaches~\cite{firstnn_coding,knet_coding,zhen2020efficientscalableneuralresidual} control the compression at via entropy-based losses and ensure good quality via reconstruction losses. 
 With the advent of deep generative models the quality of neural codecs at bit rates lower than 12 kbps greatly improved. 
 
-While for speech coding many different approaches were proven to be successful~\cite{wavenet_coding,lpcnet_coding,ssmgan,cascade_coding}, the general audio codec SoundStream~\cite{soundstream} established a new paradigm of training a residual VQ-VAE~\cite{vq_vae} via an additional GAN loss end-to-end (e2e).
+While for speech coding many different approaches were proven to be successful~\cite{wavenet_coding,lpcnet_coding,ssmgan,cascade_coding}, the general audio codec [SoundStream [8]](2021.07.07_SoundStream.md) established a new paradigm of training a residual [VQ-VAE [9]](../../Modules/VQ/2017.11.02_VQ-VAE.md) via an additional GAN loss end-to-end (e2e).
 For this, a DNN-encoder extracts a learned latent, a residual VQ generates the bit stream, and a DNN-decoder synthesizes the audio.
 All the modules are jointly learned via a combination of multiple spectral reconstruction, VQ-VAE codebook and commitment and adversarial losses.
 
-Various improvements on the design of SoundStream were proposed afterwards.
-EnCodec~\cite{defossez2023encodec} used recurrent networks and an improved compression capability via entropy coding based on language models in the quantizer.
-The Descript-Audio-Codec (DAC)~\cite{dac} achieved high quality extending on the model size, using innovative audio-specific activations~\cite{snake}, and scaling up the discriminator architecture.
+Various improvements on the design of [SoundStream](2021.07.07_SoundStream.md) were proposed afterwards.
+[EnCodec [10]](2022.10.24_EnCodec.md) used recurrent networks and an improved compression capability via entropy coding based on language models in the quantizer.
+The [Descript-Audio-Codec (DAC) [11]](2023.06.11_Descript-Audio-Codec.md) achieved high quality extending on the model size, using innovative audio-specific activations~\cite{snake}, and scaling up the discriminator architecture.
 
-The e2e VQ-GAN approach offers a great flexibility in the design and complexity of the codec~\cite{tfnet,pia22_interspeech,funcodec}.
+The e2e VQ-GAN approach offers a great flexibility in the design and complexity of the codec~\cite{tfnet, [NESC [14]](NESC.md); [FunCodec [15]](2023.09.14_FunCodec.md)}.
 However, it often entails a complicated and unstable training pipeline, which sometimes fails to meet quality expectations for challenging signal types, particularly at bit rates lower than 6 kbps.
 
-Denoising Diffusion Probabilistic Models (DDPMs) were proposed recently for speech~\cite{ladiffcodec} and general audio~\cite{NEURIPS2023_MDB,liu2024semanticodecultralowbitrate}.
-While~\cite{liu2024semanticodecultralowbitrate} targets semantic coding at ultra low bit rates, MultiBandDiffusion (MBD)~\cite{NEURIPS2023_MDB} is a decoder model that enables high-quality synthesis of the EnCodec latent at 1.5, 3 and 6 kbps for general audio.
+**Denoising Diffusion Probabilistic Models (DDPMs)** were proposed recently for speech ~\cite{ladiffcodec} and general audio ([MBD [17]](MBD.md); [SemantiCodec [18]](2024.04.30_SemantiCodec.md)).
+While [SemantiCodec [18]](2024.04.30_SemantiCodec.md) targets semantic coding at ultra low bit rates, [MultiBandDiffusion (MBD) [17]](MBD.md) is a decoder model that enables high-quality synthesis of the EnCodec latent at 1.5, 3 and 6 kbps for general audio.
 This model uses a time-domain subband-based decoding scheme and achieves state-of-the-art quality for music.
 The high complexity of this model makes it hard to use in embedded devices and its dependency on a pre-trained bit stream might limit its compression capabilities.
 
 VQ-GANs entail a highly involved training pipeline and the existing DDPMs are computationally heavy models.
 This demonstrates the need for a solution that is easy to train, while offering high quality performance at acceptable complexity.
 
-Recently, a new paradigm to train continuous normalizing flows (CNFs) called conditional flow matching (CFM) emerged~\cite{lipman2023flow} and demonstrated state-of-the-art quality for both image~\cite{esser2024scalingrectifiedflowtransformers} and audio generation~\cite{matcha, p_flow, le2023voicebox}.
+Recently, a new paradigm to train continuous normalizing flows (CNFs) called [conditional flow matching (CFM) [19]](../Flow/2022.10.06_Flow_Matching.md) emerged and demonstrated state-of-the-art quality for both image~\cite{esser2024scalingrectifiedflowtransformers} and audio generation ([Matcha-TTS [21]](../Flow/2023.09.06_Matcha-TTS.md); [P-Flow [22]](../Flow/P-Flow.md); [VoiceBox [23]](../Speech_LLM/2023.06.23_VoiceBox.md)).
 This approach offers a simple training pipeline at much lower inference and training costs compared to DDPMs. 
 
 In this work, we present the ***Flow Matching Audio Codec (FlowMAC)***, a new audio compression model for low bit rate coding of general audio at $24$ kHz audio based on CFM.
 Our proposed approach learns a mel spectrogram encoder, residual VQ, and decoder via a combination of a simple reconstruction loss and the CFM objective.
-The CFM-based decoder generates realistic mel spectrograms from the discrete latent, which is then converted to waveform domain via an efficient version of BigVGAN~\cite{lee2023bigvgan}.
+The CFM-based decoder generates realistic mel spectrograms from the discrete latent, which is then converted to waveform domain via an efficient version of [BigVGAN [24]](../TTS3_Vocoder/2022.06.09_BigVGAN.md).
 The model design is simple and the training pipeline is stable and efficient.
 
 Our contributions can be summarized as follows: 
@@ -99,10 +99,10 @@ For neural audio coding, we learn an encoder-decoder architecture that compresse
 We then use the information from this bit stream to condition a CFM-based mel spectrogram decoder for high-quality mel spectrogram generation.
 To this end, we consider the distribution $q$ of mel spectrograms of the input audio signals and we learn a time-dependent vector field $\mathbf{u}_t$, whose flow transforms a Gaussian prior $p_0$ into $q$.
 
-Flow matching~\cite{lipman2023flow} describes a method to fit a time-dependent probability density path $p_t:[0,1] \times \mathbb{R}^d \rightarrow \mathbb{R}^{\ge 0}$ between a simple sampling distribution $p_0(\mathbf{x})$ and the target data distribution $q(\mathbf{x})$, where $t \in [0,1]$ and $\mathbf{x} \in \mathbb{R}^d$.
+[Flow Matching [19]](../Flow/2022.10.06_Flow_Matching.md) describes a method to fit a time-dependent probability density path $p_t:[0,1] \times \mathbb{R}^d \rightarrow \mathbb{R}^{\ge 0}$ between a simple sampling distribution $p_0(\mathbf{x})$ and the target data distribution $q(\mathbf{x})$, where $t \in [0,1]$ and $\mathbf{x} \in \mathbb{R}^d$.
 More precisely it defines a framework to train a CNF $\phi_t$ via learning its associated vector field $\mathbf{u}_t$ directly.
 
-Following Section 4.1 in~\cite{lipman2023flow} we define 
+Following Section 4.1 in [Flow Matching [19]](../Flow/2022.10.06_Flow_Matching.md) we define 
 
 \[
 p_t(\mathbf{x}|\mathbf{x}_1) = \mathcal{N}\left(\mathbf{x}; \mu_t(\mathbf{x}_1), \sigma_t(\mathbf{x}_1)^2\mathbf{I}\right),
@@ -110,7 +110,7 @@ p_t(\mathbf{x}|\mathbf{x}_1) = \mathcal{N}\left(\mathbf{x}; \mu_t(\mathbf{x}_1),
 
 where $\mathbf{x}_1\sim q(\mathbf{x}_1)$ sampled from the train set, $\mu_t(x) = t \mathbf{x}_1$, and $\sigma_t = 1 - (1 - \sigma_\text{min})t$ with $\sigma_\text{min} \ll 1$.
 This defines a Gaussian path where $p_0$ is the standard Gaussian and $p_1$ is a Gaussian centered at $\mathbf{x}_1$ with small variance.
-Theorem 3 in \cite{lipman2023flow} shows that this probability path is generated by the Optimal Transport Conditional Vector Field
+Theorem 3 in [Flow Matching [19]](../Flow/2022.10.06_Flow_Matching.md) shows that this probability path is generated by the Optimal Transport Conditional Vector Field
 
 \[
 \mathbf{u}_t(\mathbf{x}|\mathbf{x}_1) = \frac{\mathbf{x}_1 - (1 - \sigma_\text{min})\mathbf{x}}{1 - (1 - \sigma_\text{min})t}.
@@ -160,7 +160,7 @@ The decoder architecture follows the same structure as the encoder.
 Finally, a 1$\times$1 convolutional layer serves as a final projection layer to generate the decoded quantized mel spectrogram.
 The sum of MSE and MAE losses ($\mathcal{L}_{prior}$) serves as reconstruction loss for the input mel spectrogram. 
 
-For quantization we use a learned residual VQ based on VQ-VAE~\cite{vq_vae}, with projections to small dimensional spaces similar to~\cite{dac}.
+For quantization we use a learned residual VQ based on [VQ-VAE [9]](../../Modules/VQ/2017.11.02_VQ-VAE.md), with projections to small dimensional spaces similar to [DAC [11]](2023.06.11_Descript-Audio-Codec.md).
 ***FlowMAC*** uses a codebook size of 256 and 8 quantizer stages and a downsampling dimension 16 for the 128-dimensional latent.
 Using 8 bits per level with 47 frames per second results in a rounded total of 3 kbps.
 
@@ -172,9 +172,9 @@ Using 8 bits per level with 47 frames per second results in a rounded total of 3
 <details>
 <summary>展开原文</summary>
 
-The CFM architecture follows~\cite{matcha} and uses a U-Net with residual 1D convolutional blocks and transformer blocks with snakebeta activations~\cite{lee2023bigvgan}.
-Finally, the output of the U-Net passes through a 1D Block consisting of a 1D convolution, group normalization and a Mish activation~\cite{misra2020mishselfregularizednonmonotonic}, after which a 1$\times$1 convolutional layer creates the final output.
-The corresponding time-step embeddings use a RoPE-Embedding as in~\cite{grad_tts}.
+The CFM architecture follows [Matcha-TTS [21]](../Flow/2023.09.06_Matcha-TTS.md) and uses a U-Net with residual 1D convolutional blocks and transformer blocks with snake beta activations ([BigVGAN [24]](../TTS3_Vocoder/2022.06.09_BigVGAN.md)).
+Finally, the output of the U-Net passes through a 1D Block consisting of a 1D convolution, group normalization and a [Mish activation [25]](../../Modules/Activation/Mish.md), after which a 1$\times$1 convolutional layer creates the final output.
+The corresponding time-step embeddings use a RoPE-Embedding as in [Grad-TTS [26]](../TTS2_Acoustic/2021.05.13_Grad-TTS.md).
 
 The CFM decoder is conditioned on the decoded quantized mel spectrogram via concatenation to the input Gaussian noise to estimate the corresponding vector field.
 The optimization criteria $\mathcal{L}_{\text{CFM}}$ is defined in Section~\ref{sec:fm}. 
@@ -187,7 +187,7 @@ Overall, the training objective for the whole system is then
 
 where $\lambda_p=0.01$ and $\lambda_v=0.25$ denote weighting factors for the prior and VQ-VAE loss ($\mathcal{L}_{q}$). 
 To improve the CFM training, we sample the timestep $t$ according to a logit normal distribution~\cite{esser2024scalingrectifiedflowtransformers} for each mini-batch.
-In addition, we train our model with a classifier-free guidance (CFG) technique~\cite{ho2021classifierfree}, where the decoded mel spectrogram condition is set to zero with a probability of $p_g=0.2$, which improves signal quality.
+In addition, we train our model with a [Classifier-Free Guidance (CFG) [27]](../Diffusion/Classifier-Free_Guidance.md) technique, where the decoded mel spectrogram condition is set to zero with a probability of $p_g=0.2$, which improves signal quality.
 
 </details>
 <br>
@@ -197,9 +197,9 @@ In addition, we train our model with a classifier-free guidance (CFG) technique~
 <details>
 <summary>展开原文</summary>
 
-As mel-to-audio module, we re-train a smaller version of BigVGAN~\cite{lee2023bigvgan} on our data: We adapt the mel spectrogram calculation to fit the setting described in Section~\ref{subsec:enc-dec}.
+As mel-to-audio module, we re-train a smaller version of [BigVGAN [24]](../TTS3_Vocoder/2022.06.09_BigVGAN.md) on our data: We adapt the mel spectrogram calculation to fit the setting described in Section~\ref{subsec:enc-dec}.
 Then, we decrease the decoder initial channels to 1024 and use an additional upsampling layer.
-This yields a smaller architecture than the original BigVGAN. %, whose number of parameters is comparable with the DAC Decoder.
+This yields a smaller architecture than the original BigVGAN. 
 
 Notice that the dependence of our system on this mel-to-audio module for the final audio synthesis leads to a highest achievable quality dictated by BigVGAN's performance.
 This is saturated by our mel spectrogram codec and our subjective evaluations confirm this phenomenon.
@@ -234,10 +234,10 @@ Careful attention needs to be placed on the choice of the CFG factor: values sma
 <details>
 <summary>展开原文</summary>
 
-We train both ***FlowMAC*** and BigVGAN on a combination of the full LibriTTS~\cite{libri_tts} clean and dev train subsets as in~\cite{lee2023bigvgan} and an internal music database consisting of $640$ hours of high-quality music of various genres.
-The sampling rate for all datapoints was $24$ kHz.
+We train both ***FlowMAC*** and BigVGAN on a combination of the full [LibriTTS [28]](../../Datasets/2019.04.05_LibriTTS.md) clean and dev train subsets as in [BigVGAN [24]](../TTS3_Vocoder/2022.06.09_BigVGAN.md) and an internal music database consisting of $640$ hours of high-quality music of various genres.
+The sampling rate for all data points was $24$ kHz.
 
-BigVGAN was trained following the official implementation~\cite{bigvgancode} for 1M iterations on a single A100 GPU. 
+BigVGAN was trained following the official implementation [Github [29]](https://github.com/NVIDIA/BigVGAN) for 1M iterations on a single A100 GPU. 
 ***FlowMAC*** was trained with the Adam optimizer with learning rate $10^{-4}$, a segment length of 2 s and batch size of 128 for 700k iterations on a single RTX3080.
 
 </details>
@@ -248,25 +248,25 @@ BigVGAN was trained following the official implementation~\cite{bigvgancode} for
 <details>
 <summary>展开原文</summary>
 
-To evaluate the proposed system, we perform a P.808 DCR~\cite{p808} listening test with naive listeners and a MUSHRA~\cite{mushra2015} listening test with expert listeners. 
+To evaluate the proposed system, we perform a [P.808 DCR [30]](../../Evaluations/P.808_DCR.md) listening test with naive listeners and a [MUSHRA [31]](../../Evaluations/MUSHRA.md) listening test with expert listeners. 
 To this end, we design a test set of 12 items carefully selected to represent typical challenging signals for audio codecs.
 The test set includes 4 clean and noisy speech samples (male, female, child and speech over music, including fast and emotional speech with varying prosody), 5 music items of various genres (including rock, pop, classical and electronic), and 3 out-of-distribution items (castanets, harpsichord and glockenspiel).
 
 For the P.808 DCR test we compare ***FlowMAC*** to state-of-the-art DNN-based audio codecs and a well-known legacy codec.
-We select the GAN-based audio codecs DAC~\cite{dac} and EnCodec~\cite{defossez2023encodec}, and the DDPM-baseline MBD~\cite{NEURIPS2023_MDB}.
-We use the official implementations and pre-trained weights for all those models \cite{copet2023simple,daccode}.%\footnote{https://github.com/facebookresearch/audiocraft/}$^,$\footnote{https://github.com/descriptinc/descript-audio-codec}.  
+We select the GAN-based audio codecs [DAC [11]](2023.06.11_Descript-Audio-Codec.md) and [EnCodec [10]](2022.10.24_EnCodec.md), and the DDPM-baseline [MBD [17]](MBD.md).
+We use the official implementations and pre-trained weights for all those models ([MusicGen [32]](../Speech_LLM/2023.06.08_MusicGen.md) [Github](https://github.com/facebookresearch/audiocraft/); [DAC Github [33]](https://github.com/descriptinc/descript-audio-codec)).
 We recognize that the training sets vary strongly between the conditions.
 Still, we consider it useful to compare our system with well-established and robust codecs.
 
 As a measure of the highest achievable quality with ***FlowMAC*** we include the copy-synthesis of the signals via BigVGAN.
-As a benchmark legacy-condition we use an internal implementation of the MPEG-D USAC Standard~\cite{neuendorf2013the}.
+As a benchmark legacy-condition we use an internal implementation of the [MPEG-D USAC Standard [34]](../../Evaluations/USAC.md).
 This works on full-band audio, but we downsample the decoded signal to 24 kHz to more closely measure the differences in the codecs at this sample rate.
 This puts USAC at a disadvantage and may result in lower scores for it.
 As a lower anchor a low-pass filter with cutoff frequency of 3.5 kHz was used.
 
 The P.808 DCR offers a good overall idea of the average quality of the different conditions in the test.
 The MUSHRA test provides finer comparisons between a subset of the most promising conditions.
-Therefore, BigVGAN, ***FlowMAC*** at 3 kbps, DAC at 6 kbps, MBD at 6 kbps and USAC at 8 kbps are selected for the MUSHRA test.
+Therefore, BigVGAN, ***FlowMAC*** at 3 kbps, [DAC](2023.06.11_Descript-Audio-Codec.md) at 6 kbps, MBD at 6 kbps and USAC at 8 kbps are selected for the MUSHRA test.
 
 </details>
 <br>
@@ -296,14 +296,14 @@ The results from the naive listeners confirm that both ***FlowMAC*** and ***Flow
 ***FlowMAC*** at 1.5 kbps shows a significant quality drop, while no significant quality improvement is achieved by the 6 kbps version ***FlowMAC-CQ***.
 As expected, the copy-synthesis with BigVGAN offers the highest achievable quality for our system.
 ***FlowMAC-LC***'s average rating are lower than the high-complexity version. Still, the test confirms that it is a competitive baseline.
-For naive listeners the higher frequency resolution of DAC 44.1 kHz at 8 kbps offers does not offer an advantage over the 24 kHz model.
+For naive listeners the higher frequency resolution of [DAC](2023.06.11_Descript-Audio-Codec.md) 44.1 kHz at 8 kbps offers does not offer an advantage over the 24 kHz model.
 
 Overall we notice that the all DNN conditions achieve comparable quality with the legacy USAC condition at similar bit rates, the only exception being ***FlowMAC*** at 3 kbps.
 
 The results of the MUSHRA test with 14 listeners are illustrated in Figure~\ref{fig:mushra}.
-While USAC 8 kbps has a quality advantage on average over the other codecs here, this test demonstrates that ***FlowMAC*** at 3 kbps performs similar to DAC 6 kbps and both conditions outperform MBD 6 kbps.
+While USAC 8 kbps has a quality advantage on average over the other codecs here, this test demonstrates that ***FlowMAC*** at 3 kbps performs similar to [DAC](2023.06.11_Descript-Audio-Codec.md) 6 kbps and both conditions outperform MBD 6 kbps.
 We notice that the performance of the DNN-based codecs highly varies for different items in the test set.
-In particular, ***FlowMAC*** performs poorly on the out-of-distribution test items, while its performance is on average comparable with DAC for speech and music.
+In particular, ***FlowMAC*** performs poorly on the out-of-distribution test items, while its performance is on average comparable with [DAC](2023.06.11_Descript-Audio-Codec.md) for speech and music.
 The copy-synthesis from BigVGAN performs best average and offers an measurement of the highest quality achievable with ***FlowMAC***.
 We notice that these results more clearly highlight fine difference between the codecs, but are overall in accordance with our P.808 test results.
 
