--- a/Models/Speech_Neural_Codec/2024.09.26_FlowMAC.md
+++ b/Models/Speech_Neural_Codec/2024.09.26_FlowMAC.md
@@ -140,12 +140,16 @@ This flow is then integrated using an ODE solver, e.g. the Euler method.
 <details>
 <summary>展开原文</summary>
 
-The architecture of ***FlowMAC*** is illustrated in Figure~\ref{fig:arch}.
+The architecture of ***FlowMAC*** is illustrated in Fig.01.
 
 </details>
 <br>
 
-### 3.1.Mel Encoder-Decoder
+***FlowMAC*** 的架构如下图所示.
+
+![](Images/2024.09.26_FlowMAC_Fig.01.png)
+
+### 3.1.Mel Encoder-Decoder: 梅尔频谱编码器-解码器
 
 <details>
 <summary>展开原文</summary>
@@ -167,7 +171,22 @@ Using 8 bits per level with 47 frames per second results in a rounded total of 3
 </details>
 <br>
 
-### 3.2.CFM Module
+对输入的 24 kHz 的音频以 512 样本的帧移, 2048 样本的窗口大小来计算出 128 个梅尔频谱图频带, 即每秒 47 帧.
+即一秒 24000 个采样点, 每帧有 512 个采样点不同, 那么得到帧数 24000/512 ≈ 47.
+均值和标准差则是在整个数据集上离线计算, 并作为固定的归一化因子作用于输入.
+归一化的梅尔频谱通过 128 个通道的卷积核为 $1\times 1$ 的卷积层来提取特征, 作为编码器的输入.
+编码器是多头注意力, 随机失活, 层归一化, 前馈网络, 随机失活层的序列, 产生一个隐向量用于后续量化.
+网络块重复 $N=6$ 次.
+
+解码器架构遵循编码器的架构.
+最后, 一个 $1\times 1$ 卷积层作为最终的映射层生成解码后的量化梅尔频谱图.
+MSE 和 MAE 损失的和作为输入的梅尔频谱的重构损失.
+
+对于量化, 我们使用基于 VQ-VAE 的学习好的残差矢量量化, 和类似 [DAC [11]](2023.06.11_Descript-Audio-Codec.md) 的投影层, 将隐向量投影到小维度空间.
+***FlowMAC*** 对 128 维的隐向量使用 256 大小的码本和 8 个量化阶段, 16 维度的下采样维度.
+使用 8 比特每级, 47 帧每秒的码率, 得到总码率 3 kbps.
+
+### 3.2.CFM Module: 条件流匹配模块
 
 <details>
 <summary>展开原文</summary>
@@ -192,7 +211,11 @@ In addition, we train our model with a [Classifier-Free Guidance (CFG) [27]](../
 </details>
 <br>
 
-### 3.3.Mel-to-Audio Module
+条件流匹配架构遵循 [Matcha-TTS [21]](../Flow/2023.09.06_Matcha-TTS.md), 使用残差 1D 卷积块和 Snake Beta 激活的 Transformer 块 ([BigVGAN [24]](../TTS3_Vocoder/2022.06.09_BigVGAN.md)).
+最后, U-Net 的输出经过由一维卷积, 组归一化和 [Mish [25]](../../Modules/Activation/Mish.md) 激活函数组成的一维模块, 然后通过 $1\times 1$ 卷积层生成最终输出.
+对应的时间步嵌入则和 [Grad-TTS [26]](../TTS2_Acoustic/2021.05.13_Grad-TTS.md) 中相同使用旋转嵌入.
+
+### 3.3.Mel-to-Audio Module: 梅尔频谱转音频模块
 
 <details>
 <summary>展开原文</summary>
@@ -207,7 +230,7 @@ This is saturated by our mel spectrogram codec and our subjective evaluations co
 </details>
 <br>
 
-### 3.4.FlowMAC inference
+### 3.4.FlowMAC Inference: 推理
 
 <details>
 <summary>展开原文</summary>
