--- a/Models/Speech_Neural_Codec/2024.09.26_FlowMAC.md
+++ b/Models/Speech_Neural_Codec/2024.09.26_FlowMAC.md
@@ -74,7 +74,7 @@ The high complexity of this model makes it hard to use in embedded devices and i
 VQ-GANs entail a highly involved training pipeline and the existing DDPMs are computationally heavy models.
 This demonstrates the need for a solution that is easy to train, while offering high quality performance at acceptable complexity.
 
-Recently, a new paradigm to train continuous normalizing flows (CNFs) called [conditional flow matching (CFM) [19]](../Flow/2022.10.06_Flow_Matching.md) emerged and demonstrated state-of-the-art quality for both image~\cite{esser2024scalingrectifiedflowtransformers} and audio generation ([Matcha-TTS [21]](../Flow/2023.09.06_Matcha-TTS.md); [P-Flow [22]](../Flow/P-Flow.md); [VoiceBox [23]](../Speech_LLM/2023.06.23_VoiceBox.md)).
+Recently, a new paradigm to train continuous normalizing flows (CNFs) called [conditional flow matching (CFM) [19]](../Flow/2022.10.06_Flow_Matching.md) emerged and demonstrated state-of-the-art quality for both image ([StableDiffusion3 [20]](../Diffusion/2024.03.05_StableDiffusion3.md)) and audio generation ([Matcha-TTS [21]](../Flow/2023.09.06_Matcha-TTS.md); [P-Flow [22]](../Flow/P-Flow.md); [VoiceBox [23]](../Speech_LLM/2023.06.23_VoiceBox.md)).
 This approach offers a simple training pipeline at much lower inference and training costs compared to DDPMs. 
 
 In this work, we present the ***Flow Matching Audio Codec (FlowMAC)***, a new audio compression model for low bit rate coding of general audio at $24$ kHz audio based on CFM.
@@ -196,7 +196,7 @@ Finally, the output of the U-Net passes through a 1D Block consisting of a 1D co
 The corresponding time-step embeddings use a RoPE-Embedding as in [Grad-TTS [26]](../TTS2_Acoustic/2021.05.13_Grad-TTS.md).
 
 The CFM decoder is conditioned on the decoded quantized mel spectrogram via concatenation to the input Gaussian noise to estimate the corresponding vector field.
-The optimization criteria $\mathcal{L}_{\text{CFM}}$ is defined in Section~\ref{sec:fm}. 
+The optimization criteria $\mathcal{L}_{\text{CFM}}$ is defined in Section 2. 
 
 Overall, the training objective for the whole system is then
 
@@ -205,7 +205,7 @@ Overall, the training objective for the whole system is then
 \]
 
 where $\lambda_p=0.01$ and $\lambda_v=0.25$ denote weighting factors for the prior and VQ-VAE loss ($\mathcal{L}_{q}$). 
-To improve the CFM training, we sample the timestep $t$ according to a logit normal distribution~\cite{esser2024scalingrectifiedflowtransformers} for each mini-batch.
+To improve the CFM training, we sample the timestep $t$ according to a logit normal distribution ([StableDiffusion3 [20]](../Diffusion/2024.03.05_StableDiffusion3.md)) for each mini-batch.
 In addition, we train our model with a [Classifier-Free Guidance (CFG) [27]](../Diffusion/Classifier-Free_Guidance.md) technique, where the decoded mel spectrogram condition is set to zero with a probability of $p_g=0.2$, which improves signal quality.
 
 </details>
@@ -215,12 +215,25 @@ In addition, we train our model with a [Classifier-Free Guidance (CFG) [27]](../
 最后, U-Net 的输出经过由一维卷积, 组归一化和 [Mish [25]](../../Modules/Activation/Mish.md) 激活函数组成的一维模块, 然后通过 $1\times 1$ 卷积层生成最终输出.
 对应的时间步嵌入则和 [Grad-TTS [26]](../TTS2_Acoustic/2021.05.13_Grad-TTS.md) 中相同使用旋转嵌入.
 
+条件流匹配解码器以解码后的量化梅尔频谱图作为条件, 与输入的高斯噪声向量通过拼接的方式来估计对应的向量场.
+优化评价指标 $\mathcal{L}_{\text{CFM}}$ 定义在第 2 节.
+
+总体而言, 整个系统的训练目标为
+
+\[
+	\mathcal{L} = \lambda_p \mathcal{L}_{prior} + \lambda_v\mathcal{L}_{q} + \mathcal{L}_{\text{CFM}},
+\]
+
+其中 $\lambda_p = 0.01$ 和 $\lambda_v = 0.25$ 分别为先验损失和 VQ-VAE 损失的权重因子.
+为了提升条件流匹配的训练, 我们为每个小批量根据对数正态分布 ([StableDiffusion3 [20]](../Diffusion/2024.03.05_StableDiffusion3.md)) 采样时间步 $t$.
+此外, 我们使用 [Classifier-Free Guidance (CFG) [27]](../Diffusion/Classifier-Free_Guidance.md) 技术训练模型, 其中解码后的梅尔频谱图条件以概率为 $p_g=0.2$ 设为零, 这可以提升信号质量.
+
 ### 3.3.Mel-to-Audio Module: 梅尔频谱转音频模块
 
 <details>
 <summary>展开原文</summary>
 
-As mel-to-audio module, we re-train a smaller version of [BigVGAN [24]](../TTS3_Vocoder/2022.06.09_BigVGAN.md) on our data: We adapt the mel spectrogram calculation to fit the setting described in Section~\ref{subsec:enc-dec}.
+As mel-to-audio module, we re-train a smaller version of [BigVGAN [24]](../TTS3_Vocoder/2022.06.09_BigVGAN.md) on our data: We adapt the mel spectrogram calculation to fit the setting described in Section 3.1.
 Then, we decrease the decoder initial channels to 1024 and use an additional upsampling layer.
 This yields a smaller architecture than the original BigVGAN. 
 
@@ -229,6 +242,13 @@ This is saturated by our mel spectrogram codec and our subjective evaluations co
 
 </details>
 <br>
+
+对于梅尔频谱转音频模块, 我们在我们的数据上重新训练了一个较小的 [BigVGAN [24]](../TTS3_Vocoder/2022.06.09_BigVGAN.md) 版本: 我们对梅尔频谱图计算方式进行了适配, 以符合第 3.1 节中描述的设置.
+然后, 我们减少解码器的初始通道数为 1024, 并使用额外的上采样层.
+这就产生了一个比原始 BigVGAN 架构更小的架构.
+
+注意到, 我们的系统依赖这个梅尔频谱转音频模块来产生最终的音频合成, 这就决定了能够达到的最高质量取决于 BigVGAN 的性能.
+这一性能受到我们梅尔频谱编解码器的限制, 并且我们的主观评价也证实了这一现象.
 
 ### 3.4.FlowMAC Inference: 推理
 
@@ -249,6 +269,18 @@ Careful attention needs to be placed on the choice of the CFG factor: values sma
 
 </details>
 <br>
+
+得益于残差矢量量化器, 我们可以在推理时丢弃码本层级, 实现比特率可扩展性.
+此外, 用于推理的欧拉方法的迭代性质使得 CFM 解码器中对于函数评估数 (Number of Function Evaluations, NFE) 有一定的自由度.
+***FlowMAC*** 在 1.5 和 3 kbps 之间工作, ODE 求解器使用 32 步, 而 CFG 因子为 1, 因此总共有 64 的 NFE.
+
+早期的实验表明, 梅尔频谱编解码器子系统的质量很快就会饱和.
+为了验证这一点, 我们引入了 ***FlowMAC-CQ***, 它是单独训练的模型, 工作在 6 kbps.
+该模型使用与 ***FlowMAC*** 相同的超参数和 NFE.
+最后, 我们通过使用单步欧拉方法和不使用 CFG, 获得 ***FlowMAC-LC*** 并使用 1 NFE, 来测试质量-复杂度权衡.
+
+非正式的听觉测试表明, 在超过 64 NFE 的情况下, 并没有显著的质量提升.
+需要注意的是, CFG 因子的选择: 值小于 0.2 往往会导致噪声信号 (除非使用单步欧拉方法), 值大于 2 可能会过度估计能量并引入不需要的伪影.
 
 ## 4.Experiments: 实验
 
